# hackathon-fpt-17-07-2026-da-quan-team

./: .env.example  .gitignore  BAO_CAO_CHUC_NANG_VA_LUONG_FE_BE.md  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  function.md  render.yaml  security_audit_report.md  startup-lens-premium-prototype.html  vercel.json
.claude/: settings.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: auth.py  config.py  security.py
backend/app/db/: base.py  migrations.py  seed.py
backend/app/llm/: __init__.py  base.py  gemini.py  nvidia.py  rag_client.py
backend/app/models/: __init__.py  analysis.py  audit_log.py  chat_message.py  document.py  extraction.py  investor_pipeline.py  investor_preference.py  profile_interview.py  startup.py  startup_access.py  startup_match.py  startup_version.py  user.py
backend/app/modules/: base.py  registry.py
backend/app/schemas/: analysis.py  auth.py  chat.py  common.py  document.py  extraction.py  investor.py  profile_interview.py  startup.py
backend/scripts/: seed_folder_index.py  seed_vc_index.py
backend/tests/: test_access_requests.py  test_api_contract.py  test_authorization.py  test_business_model_tools.py  test_cash_flow_extractor.py  test_cash_flow_regressions.py  test_cash_flow_tools.py  test_document_classifier.py  test_gemini_key_rotation.py  test_matching.py  test_profile_ingestion.py  test_profile_interview.py  test_sample_data.py  test_security.py  test_security_boundaries.py  test_surrounding_area_tools.py
(+248 files in other folders)
