[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "startup-due-diligence-api"
version = "0.1.0"
description = "FastAPI backend for startup analysis and document Q&A"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "google-genai>=1.0,<2",
  "httpx>=0.28,<1",
  "numpy>=2.0,<3",
  "openpyxl>=3.1,<4",
  "rank-bm25>=0.2.2,<1",    # document_chatbot: BM25 lexical arm of hybrid retrieval
  "pydantic-settings>=2.7,<3",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.20,<1",
  "python-pptx>=1.0,<2",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
# surrounding_area setup only (build poi.db from an OSM extract). osmium often fails to build on
# Windows, so it is optional — not needed to run the API. Install with: pip install .[osm]
osm = ["osmium>=4,<5"]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
